# gpu-mode

./: .gitignore  README.md
matrix-metal/: README.md  example.py  pyproject.toml  setup.py
matrix-metal/cpp/: CMakeLists.txt  matrix_metal.cpp  matrix_metal.mm
matrix-metal/matrix_metal/: _matrix_metal.cpp  example.py  matrix_metal.py  setup.py
matrix-metal/matrix_metal/cpp/: __init__.py  matmul.metal  matmul.mm  matrix_metal.cpp
matrix-metal/src/matrix_metal/: __init__.py  matrix_metal.py
matrix-metal/src/matrix_metal/cpp/: matmul.mm  matrix_metal.mm
matrix_metal/cpp/: matrix_metal.cpp  matrix_metal.h
matrix_metal/python/: matrix_metal.py  setup.py
