[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix_metal"
version = "0.1.0"
description = "Python library for Metal-accelerated matrix multiplication"
authors = [ { name = "Your Name", email = "your@email.com" } ]
readme = "../README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]
